--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <head>
 
         <meta charset="utf-8" />
-        <title>My first web page</title>
+        <meta name="keywords" content="szkolenia, rozwój osobisty, narzędzia dla trenera, coaching">
+        <meta name="description" content="Witamy w świecie Points of You®. To unikalna metoda coachingowa i kreatywne narzędzia do szkoleń i rozwoju. The Coaching Game I Punctum I Faces I Flow" />
+        
+        <title>Kreatywne Narzędzia do Szkoleń i Rozwoju</title>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+
+
 
     </head>
 
     <body>
 
-        <h1>My first web page</h1>
-        <p>Hello world! Hope you like my page. It's about mindfulness. </p>
+        <h1>OTWIERAMY UMYSŁY I SERCA NA CAŁYM ŚWIECIE</h1>
+        <p>Tworzymy innowacyjne narzędzia i szkolenia dla rozwoju zawodowego i osobistego. </p>
 
     </body>
 
