--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
         <h1>OTWIERAMY UMYSŁY I SERCA NA CAŁYM ŚWIECIE</h1>
         <p>Tworzymy innowacyjne narzędzia i szkolenia dla rozwoju zawodowego i osobistego. </p>
 
+        <p>Tworzymy innowacyjne <small>narzędzia i szkolenia</small> dla rozwoju zawodowego i osobistego. </p>
+        <p>Tworzymy innowacyjne <sub>narzędzia i szkolenia</sub> dla rozwoju zawodowego i osobistego. </p>
+        <p>Tworzymy innowacyjne <sup>narzędzia i szkolenia</sup> dla rozwoju zawodowego i osobistego. </p>
+        <p><pre>Tworzymy innowacyjne narzędzia i szkolenia 
+            dla rozwoju zawodowego i osobistego.</pre> </p>
+        <p>Tworzymy innowacyjne narzędzia i szkolenia dla rozwoju zawodowego i osobistego. </p>
+
+        <h1>This is a h1 tag</h1>
+        <h2>This is a h2 tag</h2>
+        <h3>This is a h3 tag</h3>
+        <h4>This is a h4 tag</h4>
+        <h5>This is a h5 tag</h5>
+
     </body>
 
 
