Body in progress

--- a/index.html
+++ b/index.html
@@ -20,18 +20,21 @@
         <h1>OTWIERAMY UMYSŁY I SERCA NA CAŁYM ŚWIECIE</h1>
         <p>Tworzymy innowacyjne narzędzia i szkolenia dla rozwoju zawodowego i osobistego. </p>
 
-        <p>Tworzymy innowacyjne <small>narzędzia i szkolenia</small> dla rozwoju zawodowego i osobistego. </p>
-        <p>Tworzymy innowacyjne <sub>narzędzia i szkolenia</sub> dla rozwoju zawodowego i osobistego. </p>
-        <p>Tworzymy innowacyjne <sup>narzędzia i szkolenia</sup> dla rozwoju zawodowego i osobistego. </p>
-        <p><pre>Tworzymy innowacyjne narzędzia i szkolenia 
-            dla rozwoju zawodowego i osobistego.</pre> </p>
-        <p>Tworzymy innowacyjne narzędzia i szkolenia dla rozwoju zawodowego i osobistego. </p>
+        <h2>Poszerzanie Perspektywy</h2>
+        <p>Profesjonaliści na całym świecie korzystają z naszych narzędzi, aby tworzyć wyrazistą komunikację, zdobywać wiedzę i mieć realny wpływ na życie ludzi</p>
 
-        <h1>This is a h1 tag</h1>
-        <h2>This is a h2 tag</h2>
-        <h3>This is a h3 tag</h3>
-        <h4>This is a h4 tag</h4>
-        <h5>This is a h5 tag</h5>
+        <h2>Siła Fotografii</h2>
+        <p>Nasze narzędzia wykorzystują język dzisiejszego świata - potężny język fotografii, który inspiruje i prowokuje umysł.</p>
+
+        <h3>Napisz do Nas</h3>
+        <p>tes@test.pl</p>
+        <h4>999 999 POY</h4>
+
+        <h5>Newsletter</h5>
+        <p>Dopisz swój adres do naszej bazy i bądź zawsze na bieżąco. Obiecujemy, że nie będziemy zaśmiecać Twojej skrzynki pocztowej.</p>
+
+
+
 
     </body>
 
