New paragraf line 36

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h5>Newsletter</h5>
         <p>Dopisz swój adres do naszej bazy i bądź zawsze na bieżąco. Obiecujemy, że nie będziemy zaśmiecać Twojej skrzynki pocztowej.</p>
 
-
+        <p><strong>With love Points of You® Polska</strong></p>
 
 
     </body>
