--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <body>
 
+
+        <img src="img/Flow_HOME PAGE IMAGE.jpg" alt="Flow - Nowe narzędzie od Points of You®"> 
         <h1>OTWIERAMY UMYSŁY I SERCA NA CAŁYM ŚWIECIE</h1>
         <p>Tworzymy innowacyjne narzędzia i szkolenia dla rozwoju zawodowego i osobistego. </p>
 
