Added new pages and links

--- a/index.html
+++ b/index.html
@@ -22,11 +22,17 @@
         <h1>OTWIERAMY UMYSŁY I SERCA NA CAŁYM ŚWIECIE</h1>
         <p>Tworzymy innowacyjne narzędzia i szkolenia dla rozwoju zawodowego i osobistego. </p>
 
+
+        <a href="dowiedz_się_więcej/dowiedzsiewiecej.html">Dowiedz się więcej</a>
+
         <h2>Poszerzanie Perspektywy</h2>
         <p>Profesjonaliści na całym świecie korzystają z naszych narzędzi, aby tworzyć wyrazistą komunikację, zdobywać wiedzę i mieć realny wpływ na życie ludzi</p>
 
         <h2>Siła Fotografii</h2>
         <p>Nasze narzędzia wykorzystują język dzisiejszego świata - potężny język fotografii, który inspiruje i prowokuje umysł.</p>
+
+        <a href="kontakt.html">Kontakt</a>
+        
 
         <h3>Napisz do Nas</h3>
         <p>tes@test.pl</p>
