Added Unordered & Ordered List

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <body>
 
-
+        <div id="top"></div>
         <img src="img/Flow_HOME PAGE IMAGE.jpg" alt="Flow - Nowe narzędzie od Points of You®"> 
         <h1>OTWIERAMY UMYSŁY I SERCA NA CAŁYM ŚWIECIE</h1>
         <p>Tworzymy innowacyjne narzędzia i szkolenia dla rozwoju zawodowego i osobistego. </p>
@@ -31,8 +31,23 @@
         <h2>Siła Fotografii</h2>
         <p>Nasze narzędzia wykorzystują język dzisiejszego świata - potężny język fotografii, który inspiruje i prowokuje umysł.</p>
 
-        <a href="kontakt.html">Kontakt</a>
-        
+
+        <ul>
+            <li><a href="https://points-of-you.com/play/welcome" target="_blank">Zagraj Online</a></li>
+            <li><a href="dowiedz_się_więcej/dowiedzsiewiecej.html">Dowiedz się więcej</a></li>
+            <li><a href="download/Card new year.jpg">Ściągnij Noworoczną Pocztówkę Points of You®</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+
+        </ul>   
+
+
+        <ol>
+            <li><a href="https://points-of-you.com/play/welcome" target="_blank">Zagraj Online</a></li>
+            <li><a href="dowiedz_się_więcej/dowiedzsiewiecej.html">Dowiedz się więcej</a></li>
+            <li><a href="download/Card new year.jpg">Ściągnij Noworoczną Pocztówkę Points of You®</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+
+        </ol>  
 
         <h3>Napisz do Nas</h3>
         <p>tes@test.pl</p>
@@ -42,6 +57,10 @@
         <p>Dopisz swój adres do naszej bazy i bądź zawsze na bieżąco. Obiecujemy, że nie będziemy zaśmiecać Twojej skrzynki pocztowej.</p>
 
         <p><strong>With love Points of You® Polska</strong></p>
+
+
+
+        <a href="#top">Back to top</a>
 
 
     </body>
