Added list.html & definition list in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
 
         <div id="top"></div>
-        <img src="img/Flow_HOME PAGE IMAGE.jpg" alt="Flow - Nowe narzędzie od Points of You®"> 
+        <img src="img/Flow_HOME PAGE IMAGE.jpg" width="100%" alt="Flow - Nowe narzędzie od Points of You®"> 
         <h1>OTWIERAMY UMYSŁY I SERCA NA CAŁYM ŚWIECIE</h1>
         <p>Tworzymy innowacyjne narzędzia i szkolenia dla rozwoju zawodowego i osobistego. </p>
 
@@ -46,6 +46,11 @@
             <li><a href="dowiedz_się_więcej/dowiedzsiewiecej.html">Dowiedz się więcej</a></li>
             <li><a href="download/Card new year.jpg">Ściągnij Noworoczną Pocztówkę Points of You®</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
+                <ol>
+                    <li><a href="kontakt.html">2 Kontakt</a></li>
+                    <li><a href="kontakt.html">3 Kontakt</a></li>
+
+                </ol>
 
         </ol>  
 
