Using <br> & <hr> and div tags

--- a/index.html
+++ b/index.html
@@ -18,52 +18,66 @@
     <body>
 
         <div id="top"></div>
-        <img src="img/Flow_HOME PAGE IMAGE.jpg" width="100%" alt="Flow - Nowe narzędzie od Points of You®"> 
-        <h1>OTWIERAMY UMYSŁY I SERCA NA CAŁYM ŚWIECIE</h1>
-        <p>Tworzymy innowacyjne narzędzia i szkolenia dla rozwoju zawodowego i osobistego. </p>
+        
+        <div>
+            <img src="img/Flow_HOME PAGE IMAGE.jpg" width="100%" alt="Flow - Nowe narzędzie od Points of You®"> 
+            <h1>OTWIERAMY UMYSŁY I SERCA NA CAŁYM ŚWIECIE</h1>
+            <p>Tworzymy innowacyjne narzędzia i szkolenia dla rozwoju zawodowego i osobistego. </p>
+            <a href="dowiedz_się_więcej/dowiedzsiewiecej.html">Dowiedz się więcej</a>
+        </div>
 
 
-        <a href="dowiedz_się_więcej/dowiedzsiewiecej.html">Dowiedz się więcej</a>
+        
+        <div>
+            <h2>Poszerzanie Perspektywy</h2>
+            <p>Profesjonaliści na całym świecie korzystają z naszych narzędzi, aby tworzyć wyrazistą komunikację, zdobywać wiedzę i mieć realny wpływ na życie ludzi</p>
 
-        <h2>Poszerzanie Perspektywy</h2>
-        <p>Profesjonaliści na całym świecie korzystają z naszych narzędzi, aby tworzyć wyrazistą komunikację, zdobywać wiedzę i mieć realny wpływ na życie ludzi</p>
-
-        <h2>Siła Fotografii</h2>
-        <p>Nasze narzędzia wykorzystują język dzisiejszego świata - potężny język fotografii, który inspiruje i prowokuje umysł.</p>
-
-
-        <ul>
-            <li><a href="https://points-of-you.com/play/welcome" target="_blank">Zagraj Online</a></li>
-            <li><a href="dowiedz_się_więcej/dowiedzsiewiecej.html">Dowiedz się więcej</a></li>
-            <li><a href="download/Card new year.jpg">Ściągnij Noworoczną Pocztówkę Points of You®</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
-
-        </ul>   
+            <h2>Siła Fotografii</h2>
+            <p>Nasze narzędzia wykorzystują język dzisiejszego świata - potężny język fotografii, który inspiruje i prowokuje umysł.<br> Tworzymy innowacyjne narzędzia i szkolenia dla rozwoju zawodowego i osobistego. <br>Pobudzająca eksploracja, która wyostrza nasze zmysły i otwiera nowe możliwości.</p>
+        </div>
 
 
-        <ol>
-            <li><a href="https://points-of-you.com/play/welcome" target="_blank">Zagraj Online</a></li>
-            <li><a href="dowiedz_się_więcej/dowiedzsiewiecej.html">Dowiedz się więcej</a></li>
-            <li><a href="download/Card new year.jpg">Ściągnij Noworoczną Pocztówkę Points of You®</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
-                <ol>
-                    <li><a href="kontakt.html">2 Kontakt</a></li>
-                    <li><a href="kontakt.html">3 Kontakt</a></li>
+        <div>
+            <ul>
+                <li><a href="https://points-of-you.com/play/welcome" target="_blank">Zagraj Online</a></li>
+                <li><a href="dowiedz_się_więcej/dowiedzsiewiecej.html">Dowiedz się więcej</a></li>
+                <li><a href="download/Card new year.jpg">Ściągnij Noworoczną Pocztówkę Points of You®</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
 
-                </ol>
+            </ul>   
 
-        </ol>  
-
-        <h3>Napisz do Nas</h3>
-        <p>tes@test.pl</p>
-        <h4>999 999 POY</h4>
-
-        <h5>Newsletter</h5>
-        <p>Dopisz swój adres do naszej bazy i bądź zawsze na bieżąco. Obiecujemy, że nie będziemy zaśmiecać Twojej skrzynki pocztowej.</p>
-
-        <p><strong>With love Points of You® Polska</strong></p>
+        </div>
 
 
+        <div>
+            <ol>
+                <li><a href="https://points-of-you.com/play/welcome" target="_blank">Zagraj Online</a></li>
+                <li><a href="dowiedz_się_więcej/dowiedzsiewiecej.html">Dowiedz się więcej</a></li>
+                <li><a href="download/Card new year.jpg">Ściągnij Noworoczną Pocztówkę Points of You®</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+                    <ol>
+                        <li><a href="kontakt.html">2 Kontakt</a></li>
+                        <li><a href="kontakt.html">3 Kontakt</a></li>
+
+                    </ol>
+
+            </ol>  
+        </div>
+
+
+        <div>
+            <hr>
+                <h3>Napisz do Nas</h3>
+                <p>tes@test.pl</p>
+                <h4>999 999 POY</h4>
+
+                <h5>Newsletter</h5>
+                <p>Dopisz swój adres do naszej bazy i bądź zawsze na bieżąco. Obiecujemy, że nie będziemy zaśmiecać Twojej skrzynki pocztowej.</p>
+
+                <p><strong>With love Points of You® Polska</strong></p>
+
+            <hr>
+        </div>
 
         <a href="#top">Back to top</a>
 
