div id & div class

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div id="top"></div>
         
-        <div>
+        <div id="header">
             <img src="img/Flow_HOME PAGE IMAGE.jpg" width="100%" alt="Flow - Nowe narzędzie od Points of You®"> 
             <h1>OTWIERAMY UMYSŁY I SERCA NA CAŁYM ŚWIECIE</h1>
             <p>Tworzymy innowacyjne narzędzia i szkolenia dla rozwoju zawodowego i osobistego. </p>
@@ -49,7 +49,7 @@
         </div>
 
 
-        <div>
+        <div id="navigation">
             <ol>
                 <li><a href="https://points-of-you.com/play/welcome" target="_blank">Zagraj Online</a></li>
                 <li><a href="dowiedz_się_więcej/dowiedzsiewiecej.html">Dowiedz się więcej</a></li>
@@ -65,13 +65,22 @@
         </div>
 
 
-        <div>
+        <div id="contact">
             <hr>
-                <h3>Napisz do Nas</h3>
-                <p>tes@test.pl</p>
-                <h4>999 999 POY</h4>
+                <h2>Napisz do Nas</h2>
+                
+                <div class="contact-method">
+                    <h3>By Email</h3>
+                    <p>tes@test.pl</p>
+                </div>
 
-                <h5>Newsletter</h5>
+
+                <div class="contact-method">
+                    <h3>By Phone</h3>
+                    <p>999 999 POY</p>
+                </div>
+
+                <h3>Newsletter</h3>
                 <p>Dopisz swój adres do naszej bazy i bądź zawsze na bieżąco. Obiecujemy, że nie będziemy zaśmiecać Twojej skrzynki pocztowej.</p>
 
                 <p><strong>With love Points of You® Polska</strong></p>
